[package]
name = "gatherr"
version = "0.1.0"
authors = ["Skynoodle <iainrobert.maciver@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Helpers for collecting values and errors from result iterators"
readme = "README.md"
repository = "https://github.com/Skynoodle/gatherr"
keywords = ["result", "error", "iterator"]
categories = ["rust-patterns"]

[dependencies]
